--- a/calculo.cabal
+++ b/calculo.cabal
@@ -25,8 +25,10 @@ source-repository head
 
 library
   exposed-modules:
+      Parser.Parser
       Parser.Token
       Parser.Tokenizer
+      Parser.Tree
   other-modules:
       Paths_calculo
   hs-source-dirs:
